Replace ExpressionFactory by IExpression.of